--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,10 +1,16 @@
 {
+  "GameDbContext": {
+    "DataSource": "/apps/MarketMakingGame/data/marketmakinggame.db"
+  },
+  "DeleteGameService": {
+    "FrequencyMinutes": 10
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
