--- a/Server/appsettings.Development.json
+++ b/Server/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "GameDbContext": {
+    "DataSource": "/Users/home/data/marketmakinggame.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
