vagrant build files

--- a/src/Server/appsettings.Development.json
+++ b/src/Server/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "GameDbContext": {
-    "DataSource": "/Users/home/data/marketmakinggame.db"
+    "DataSource": "./data/marketmakinggame.db"
   },
   "Logging": {
     "LogLevel": {
